# fittingflow

./: .env.example  Dockerfile  Makefile  README.md  agent_api.py  agent_cli.py  docker-compose.yml  example.py  main.py  pyproject.toml  requirements.txt  simple-server.py  start-dev.py
agent/: __init__.py  react_agent.py  workflow_tools.py
fittingflow/: __init__.py  context.py  node.py  workflow.py
fittingflow/nodes/: __init__.py  basic.py  llm.py
scripts/: install-uv.sh
static/: index.html
tests/: __init__.py  test_core.py
tools/: __init__.py  gateway.py
